Agregando interaccion entre base de datos y templates

--- a/idgs9A/videogames/templates/videogames/base.html
+++ b/idgs9A/videogames/templates/videogames/base.html
@@ -44,7 +44,12 @@
       </div>
     </nav>
 
-    {% block content %} {% endblock %}
+    <!-- Contenido -->
+
+<div class="container">
+  {% block content %}{% endblock %}
+</div>
+    
 
     <!-- Pié de página -->
     <footer class="footer text-faded text-center py-5">
