--- a/idgs9A/videogames/templates/videogames/home.html
+++ b/idgs9A/videogames/templates/videogames/home.html
@@ -1,14 +1,19 @@
 {% extends 'videogames/base.html' %}
-{% block title %}Inicio{% endblock %}
 {% load static %}
-
-
 {% block content %}
     <h1>Inicio</h1>
-    <h2>daedaeede</h2>
-    {% for videojuego in videojuegos %}
-        <div class="container">   
-            <h2>{{videojuego.content}}</h2>
-        </div>
-    {% endfor %}
+    <div class="card-group">
+        {% for videojuego in videojuegos %}
+            <div class="card">
+                <img src="media/{{videojuego.image}}" height="250px" class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">{{videojuego.title}}</h5>
+                <p class="card-text">{{videojuego.content}}</p>
+                </div>
+                <div class="card-footer">
+                <small class="text-muted">{{videojuego.updated}}</small>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
