--- a/idgs9A/videogames/templates/videogames/base.html
+++ b/idgs9A/videogames/templates/videogames/base.html
@@ -21,7 +21,7 @@
 
   </head>
 
-  <body >
+  <body style="background-color: #F4F6F6;">
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
