--- a/idgs9A/videogames/templates/videogames/home.html
+++ b/idgs9A/videogames/templates/videogames/home.html
@@ -14,9 +14,39 @@
                   <p class="card-text">{{videojuego.subtitle}}</p>
                 </div>
                 <div class="card-footer">
-                  <a href="{% url 'detail' %}">Ver más....</a>
+                  <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Ver más....
+                  </button>
                 </div>
             </div>
+        </div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">{{videojuego.title}}</h3>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">        
+                <div class="row">
+                  <img class="rounded mx-auto d-block col-8 col-sm-6" src="media/{{videojuego.image}}" style="max-height: 200px;" alt="...">
+                  <div class="col-4 col-sm-6">
+                    <h5>Plataformas</h5>
+                    <p class="card-text">{{videojuego.subtitle}}</p>
+                  </div>
+                </div>
+                <hr>
+                <h5>Descripción del juego</h5>
+                <p class="card-text text-capitalize">{{videojuego.content}}</p>     
+                <hr>
+                <h5>Post actualizado:</h5>
+                <p class="card-text">{{videojuego.updated}}</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
+          </div>
         </div>
         {% endfor %}
     </div>
