--- a/idgs9A/videogames/static/videogames/css/home.css
+++ b/idgs9A/videogames/static/videogames/css/home.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
-
-.col .card{
+.col .card {
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
     overflow: hidden;
@@ -8,13 +7,67 @@
     transition: all 0.25s;
 }
 
-.col .card:hover{
+.col .card:hover {
     transform: translateY(-15px);
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.6);
 }
 
-.col .card p{
+.col .card p {
     padding: 0 1rem;
     font-size: 16px;
     font-weight: 300;
+}
+
+.btn-cerrar {
+    background-color: #293241;
+    color: #F4F6F6;
+}
+
+.btn-cerrar:hover {
+    background-color: #3d5a80;
+    color: #000;
+}
+
+.welcome {
+    width: 100%;
+    height: 500px;
+    background-color: #3d5a80;
+}
+
+.imagen {
+    position: absolute;
+    width: 944px;
+    height: 500px;
+    background-color: #3d5a80;
+}
+
+.imgWelcome {
+    width: 100%;
+    height: 500px;
+}
+
+.mensaje {
+    position: absolute;
+    margin-left: 944px;
+    width: 405px;
+    height: 500px;
+    background-color: #293241;
+    border-top-color: #3d5a80;
+    border-top-style: solid;
+    border-width: 2px;
+}
+
+.mensaje .titulo,
+.mensaje .subtitulo {
+    color: #F4F6F6;
+}
+
+.mensaje .titulo {
+    margin-top: 60px;
+    margin-left: 30px;
+}
+
+.mensaje .subtitulo {
+    margin-top: 15px;
+    margin-left: 30px;
 }
