--- a/idgs9A/videogames/templates/videogames/basehome.html
+++ b/idgs9A/videogames/templates/videogames/basehome.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="{% static 'videogames/css/base.css' %}" rel="stylesheet">
+    <link href="{% static 'videogames/css/basehome.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'videogames/css/font-awesome.min.css' %}">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
@@ -54,7 +54,7 @@
 
     <!-- Contenido -->
 
-    <div class="container p-4">
+    <div class="contenedor">
         {% block content %}{% endblock %}
     </div>
 
