--- a/idgs9A/videogames/templates/videogames/base.html
+++ b/idgs9A/videogames/templates/videogames/base.html
@@ -47,7 +47,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="{% url 'index' %}">
-                <img src="https://media.contentapi.ea.com/content/dam/eacom/es-es/common/october-ea-ring.png" width="30" height="30" class="d-inline-block align-top logo" alt="">
+                <img src="media/videogames/galaxy_logo.png" width="30" height="30" class="d-inline-block align-top logo" alt="">
             </a>
         </div>
     </nav>
