--- a/idgs9A/videogames/templates/videogames/home.html
+++ b/idgs9A/videogames/templates/videogames/home.html
@@ -2,12 +2,11 @@
 <link href="{% static 'videogames/css/home.css' %}" rel="stylesheet">
 <div class="welcome">
     <div class="imagen">
-        <img src="https://i.pinimg.com/736x/4c/13/7e/4c137e0e339a7468f0daf3364d7cfd10.jpg" class="imgWelcome">
+        <img src="media/videogames/galaxy_visual.png" class="imgWelcome">
     </div>
     <div class="mensaje">
         <h3 class="titulo">Galaxy Games</h3>
-        <h1 class="subtitulo">¡Bienvenido a nuestra página! Esperamos que te guste.
-        </h1>
+        <h1 class="subtitulo">¡Bienvenido a nuestra página! Esperamos que te guste.</h1>
     </div>
 </div>
 <div class="container p-4">
