--- a/idgs9A/videogames/templates/videogames/about.html
+++ b/idgs9A/videogames/templates/videogames/about.html
@@ -1,45 +1,44 @@
-{% extends 'videogames/base.html' %}
+{% extends 'videogames/base.html' %} {% load static %} {% block content %}
+<link href="{% static 'videogames/css/about.css' %}" rel="stylesheet">
+<h1 class="mt-2 mb-4">Nosotros</h1>
+<div class="contenido mt-10">
+    <div class="empresa">
+        <div class="imgLogo">
+            <h3 class="titulo">Galaxy Games</h3>
+            <img src="media/videogames/galaxy_logo.png" class="logotipo">
+        </div>
+        <div class="info">
+            <p class="about">
+                Galaxy Games es una compañía independiente dedicada a la distribución digital de videojuegos, con la idea de en un futuro desarrollar nuestros propios videojuegos e impulsar a mas desarrolladores a hacerlo. La empresa surge tras la combinación de dos
+                de los elementos que nos apasionan al equipo de trabajo de Galaxy Games: Los videojuegos y la programación.
+            </p>
+        </div>
+    </div>
+    <hr>
+    <div class="nosotros">
+        <div class="card" style="width: 18rem;">
+            <img src="https://i.pinimg.com/736x/4e/22/dd/4e22dde80c481b344bbe371fe1c2cf81--eye-legend-of-zelda.jpg" class="card-img-top cardprofile" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Emanuel Rangel Luna</h5>
+                <p class="card-text">T.S.U Desarrollador de Software Multiplataforma</p>
+            </div>
+        </div>
 
-{% load static %}
+        <div class="card" style="width: 18rem;">
+            <img src="https://avatarfiles.alphacoders.com/242/242417.png" class="card-img-top cardprofile" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Luis Angel Santos Islas</h5>
+                <p class="card-text">T.S.U Desarrollador de Software Multiplataforma</p>
+            </div>
+        </div>
 
-{% block content %}
-    <h1>Nosotros</h1>
-    <div class="accordion" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              ¿Quienes somos?
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-            <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <div class="card" style="width: 18rem;">
+            <img src="http://fazalgfx.weebly.com/uploads/4/6/1/7/46178555/s238582533590803654_p4_i2_w640.png" class="card-img-top cardprofile" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Jonathan Perez Ordoñez</h5>
+                <p class="card-text">T.S.U Desarrollador de Software Multiplataforma</p>
             </div>
-          </div>
         </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-              Nuestro trabajo
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-            <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-              Proyectos
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-      </div>
+    </div>
+</div>
 {% endblock %}
