arreglando bugs de duplicado en template games

--- a/idgs9A/videogames/templates/videogames/games.html
+++ b/idgs9A/videogames/templates/videogames/games.html
@@ -12,13 +12,14 @@
                 <p class="card-text">{{videojuego.subtitle}}</p>
             </div>
             <div class="card-footer">
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal-{{videojuego.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
                     Ver más....
                   </button>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal-{{videojuego.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
