--- a/idgs9A/videogames/templates/videogames/base.html
+++ b/idgs9A/videogames/templates/videogames/base.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap -->
     <!-- CSS only -->
+    <script src="https://kit.fontawesome.com/fe829b7767.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="{% static 'videogames/css/base.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'videogames/css/font-awesome.min.css' %}">
