--- a/idgs9A/videogames/static/videogames/css/about.css
+++ b/idgs9A/videogames/static/videogames/css/about.css
@@ -1,68 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 .contenido {
     width: 100%;
-    height: 750px;
 }
 
 .empresa {
     width: 100%;
-    height: 400px;
-}
-
-.empresa .imgLogo {
-    width: 500px;
-    height: 400px;
-    position: absolute;
 }
 
 .titulo {
     font-family: 'Poppins', sans-serif;
     color: #293241;
-    text-align: center;
 }
 
 .logotipo {
     margin-top: 10px;
-    height: 280px;
-    margin-left: 120px;
-}
-
-.empresa .info {
-    width: 592px;
-    height: 400px;
-    position: absolute;
-    margin-left: 500px;
+    max-width: 350px;
 }
 
 .about {
-    width: 500px;
     margin-top: 50px;
     font-size: 20px;
     text-align: justify;
 }
 
 .nosotros {
-    width: 100%;
-    height: 350px;
-    display: flex;
     justify-content: center;
 }
 
 .nosotros .card {
     margin-left: 25px;
     margin-right: 25px;
-    display: inline-block;
 }
 
 .nosotros .card .cardprofile {
-    width: 18rem;
+    width: 100%;
     height: 200px;
 }
 
 .card {
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
-    overflow: hidden;
     text-align: center;
     transition: all 0.25s;
 }
@@ -70,4 +47,19 @@
 .card:hover {
     transform: translateY(-15px);
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.6);
+}
+
+.github{
+    width: 300px;
+    height: 80px;
+}
+
+.nosotros a{
+    color: #000;
+    text-align: center;
+    font-size: 20px;
+}
+
+.github:hover{
+    color: dodgerblue;
 }
