--- a/idgs9A/videogames/static/videogames/css/home.css
+++ b/idgs9A/videogames/static/videogames/css/home.css
@@ -32,12 +32,10 @@
 .welcome {
     width: 100%;
     height: 500px;
+    padding: 0%;
     background-color: #3d5a80;
 }
-
 .imagen {
-    position: absolute;
-    width: 944px;
     height: 500px;
     background-color: #3d5a80;
 }
@@ -48,9 +46,7 @@
 }
 
 .mensaje {
-    position: absolute;
-    margin-left: 944px;
-    width: 405px;
+    margin: 0%;
     height: 500px;
     background-color: #293241;
     border-top-color: #3d5a80;
