--- a/idgs9A/videogames/templates/videogames/about.html
+++ b/idgs9A/videogames/templates/videogames/about.html
@@ -2,12 +2,13 @@
 <link href="{% static 'videogames/css/about.css' %}" rel="stylesheet">
 <h1 class="mt-2 mb-4">Nosotros</h1>
 <div class="contenido mt-10">
-    <div class="empresa">
-        <div class="imgLogo">
-            <h3 class="titulo">Galaxy Games</h3>
-            <img src="media/videogames/galaxy_logo.png" class="logotipo">
+    <div class="empresa row">
+        <div class="col imgLogo">
+            <img src="media/videogames_logos/galaxy_logo.png" class="logotipo">
         </div>
-        <div class="info">
+        <div class="col info">
+            <br>
+            <h3 class="titulo">Galaxy Games</h3>
             <p class="about">
                 Galaxy Games es una compañía independiente dedicada a la distribución digital de videojuegos, con la idea de en un futuro desarrollar nuestros propios videojuegos e impulsar a mas desarrolladores a hacerlo. La empresa surge tras la combinación de dos
                 de los elementos que nos apasionan al equipo de trabajo de Galaxy Games: Los videojuegos y la programación.
@@ -15,30 +16,33 @@
         </div>
     </div>
     <hr>
-    <div class="nosotros">
-        <div class="card" style="width: 18rem;">
+    <div class="nosotros row row-cols-1 row-cols-md-4 g-4">
+        <div class="card col mb-4" style="width: 18rem;">
             <img src="https://i.pinimg.com/736x/4e/22/dd/4e22dde80c481b344bbe371fe1c2cf81--eye-legend-of-zelda.jpg" class="card-img-top cardprofile" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Emanuel Rangel Luna</h5>
-                <p class="card-text">T.S.U Desarrollador de Software Multiplataforma</p>
+                <p class="card-text">T.S.U Desarrollador de Software Multiplataforma</p> 
+                <a href="https://github.com/ERL151201" class="github"><i class="fa fa-github"> Mi GitHub</i></a>
             </div>
         </div>
-
-        <div class="card" style="width: 18rem;">
+        <div class="card col mb-4" style="width: 18rem;">
             <img src="https://avatarfiles.alphacoders.com/242/242417.png" class="card-img-top cardprofile" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Luis Angel Santos Islas</h5>
                 <p class="card-text">T.S.U Desarrollador de Software Multiplataforma</p>
+                <a href="https://github.com/Luis-Angel-Santos" class="github"><i class="fa fa-github"> Mi GitHub</i></a>
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card col mb-4" style="width: 18rem;">
             <img src="http://fazalgfx.weebly.com/uploads/4/6/1/7/46178555/s238582533590803654_p4_i2_w640.png" class="card-img-top cardprofile" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Jonathan Perez Ordoñez</h5>
                 <p class="card-text">T.S.U Desarrollador de Software Multiplataforma</p>
+                <a href="https://github.com/TheJonaCode" class="github"><i class="fa fa-github"> Mi GitHub</i></a>
             </div>
         </div>
     </div>
+    <hr>
 </div>
 {% endblock %}
