--- a/idgs9A/videogames/templates/videogames/games.html
+++ b/idgs9A/videogames/templates/videogames/games.html
@@ -6,16 +6,19 @@
     {% for videojuego in videojuegos %}
     <div class="col mb-4">
         <div class="card h-100">
-            <img src="media/{{videojuego.image}}" style="max-height: 200px;" alt="...">
+            <img src="media/{{videojuego.image}}" style="max-height: 200px;" alt="Imagen no encontrada">
             <div class="card-body">
                 <h5 class="card-title">{{videojuego.title}}</h5>
-                <p class="card-text">{{videojuego.subtitle}}</p>
+                <p class="card-text">{{videojuego.genero}}</p>
+                <i style="color: black;">
+                    {{videojuego.calification}}
+                    <i class="fas fa-star" style="color: yellow;"></i>
+                </i>
             </div>
             <div class="card-footer">
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal-{{videojuego.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                    Ver más....
-                  </button>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal-{{videojuego.id}}">
+                Ver más....
+              </button>
             </div>
         </div>
     </div>
@@ -28,12 +31,22 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <img class="rounded mx-auto d-block col-8 col-sm-6" src="media/{{videojuego.image}}" style="max-height: 200px;" alt="...">
+                        <img class="rounded mx-auto d-block col-8 col-sm-6" src="media/{{videojuego.image}}" style="max-height: 200px;" alt="Imagen no encontrada">
                         <div class="col-4 col-sm-6">
                             <h5>Plataformas</h5>
                             <p class="card-text">{{videojuego.subtitle}}</p>
+                            <h5>Genero</h5>
+                            <p class="card-text">{{videojuego.genero}}</p>
+                            <h5>Año de lanzamiento</h5>
+                            <p class="card-text">{{videojuego.year}}</p>
                         </div>
                     </div>
+                    <hr>
+                    <h5>Calificación de los usuarios</h5>
+                    <i style="color: black;">
+                        {{videojuego.calification}}
+                        <i class="fas fa-star" style="color: yellow;"></i>
+                    </i>
                     <hr>
                     <h5>Descripción del juego</h5>
                     <p class="card-text text-capitalize">{{videojuego.content}}</p>
@@ -42,7 +55,7 @@
                     <p class="card-text">{{videojuego.updated}}</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-cerrar" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
