--- a/idgs9A/seriesByRVY/templates/seriesByRVY/base.html
+++ b/idgs9A/seriesByRVY/templates/seriesByRVY/base.html
@@ -8,15 +8,15 @@
     <meta name="author" content="">
 
     <title>Series BY RVY</title>
-
     {% load static %}
+    <link rel="stylesheet" href="{% static 'seriesByRVY/css/index.css' %}">
 
 </head>
 
 <body>
     <nav>
         <div class="image">
-            <img src="" alt="">
+            <img src="media/seriesByRVY/logo.png" alt="">
         </div>
 
         <ul>
