series list styles

--- a/idgs9A/seriesByRVY/templates/seriesByRVY/base.html
+++ b/idgs9A/seriesByRVY/templates/seriesByRVY/base.html
@@ -20,8 +20,8 @@
         </div>
 
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Series</a></li>
+            <li><a href="/series/home">Home</a></li>
+            <li><a href="/series/series">Series</a></li>
         </ul>
     </nav>
 
