--- a/idgs9A/seriesByRVY/static/seriesByRVY/css/index.css
+++ b/idgs9A/seriesByRVY/static/seriesByRVY/css/index.css
@@ -6,8 +6,6 @@
 
 body {
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
 }
 
 h3 {
@@ -78,6 +76,51 @@ nav ul li a {
 }
 .famous-series .serie img {
   width: 100%;
+}
+
+.serie-list {
+  width: 100%;
+  margin-left: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  gap: 40px;
+}
+.serie-list li {
+  width: 20%;
+}
+
+.serie-card {
+  width: 100%;
+  margin: 0 0 20px 0;
+  border: solid 1px white;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 1px 1px 9px 1px rgba(34, 34, 34, 0.221);
+  transition: ease-in-out all 0.3s;
+  cursor: pointer;
+}
+.serie-card .serie-image {
+  width: 100%;
+}
+.serie-card .serie-image img {
+  width: 100%;
+}
+.serie-card .ranking {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+}
+.serie-card .ranking img {
+  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.1));
+}
+.serie-card .title {
+  padding: 3px 10px;
+}
+.serie-card:hover {
+  transform: rotate(-5deg) translateX(-30px) translateY(-20px);
 }
 
 /*# sourceMappingURL=index.css.map */
