--- a/idgs9A/seriesByRVY/static/seriesByRVY/sass/index.scss
+++ b/idgs9A/seriesByRVY/static/seriesByRVY/sass/index.scss
@@ -6,8 +6,7 @@
 
 body{
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    
 }
 
 h3{
@@ -82,3 +81,54 @@ nav{
         }
     }
 }
+
+
+
+.serie-list{
+    width: 100%;
+    margin-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    gap: 40px;
+    li{
+        width: 20%;
+    }
+}
+
+.serie-card{
+    width: 100%;
+    margin: 0 0 20px 0;
+    border: solid 1px white;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 1px 1px 9px 1px rgba(34, 34, 34, 0.221);
+    transition: ease-in-out all .3s;
+    cursor: pointer;
+
+    .serie-image{
+        width: 100%;
+        img{
+            width: 100%;
+        }       
+    }
+
+    .ranking{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 10px;
+        img{
+            filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.1));
+        }
+    }
+
+    .title{
+        padding: 3px 10px;
+    }
+    
+    &:hover{
+        transform: rotate(-5deg) translateX(-30px) translateY(-20px);
+    }
+}   
