--- a/idgs9A/seriesByRVY/templates/seriesByRVY/seriesList.html
+++ b/idgs9A/seriesByRVY/templates/seriesByRVY/seriesList.html
@@ -1,14 +1,15 @@
-<ul>
+{% extends 'seriesByRVY/base.html' %} {% block content %}
+<ul class="serie-list">
     <li>
         <div class="serie-card">
             <div class="serie-image">
-                <img src="" alt="">
+                <img src="media/seriesByRVY/theOffice.jpg" alt="">
             </div>
             <div class="title">
                 <h2>Title of serie</h2>
             </div>
             <div class="ranking">
-                <img src="" alt="">
+                <img src="media/seriesByRVY/star.svg" alt="">
                 <p>4.5</p>
             </div>
         </div>
@@ -17,13 +18,13 @@
     <li>
         <div class="serie-card">
             <div class="serie-image">
-                <img src="" alt="">
+                <img src="media/seriesByRVY/theOffice.jpg" alt="">
             </div>
             <div class="title">
                 <h2>Title of serie</h2>
             </div>
             <div class="ranking">
-                <img src="" alt="">
+                <img src="media/seriesByRVY/star.svg" alt="">
                 <p>4.5</p>
             </div>
         </div>
@@ -32,15 +33,16 @@
     <li>
         <div class="serie-card">
             <div class="serie-image">
-                <img src="" alt="">
+                <img src="media/seriesByRVY/theOffice.jpg" alt="">
             </div>
             <div class="title">
                 <h2>Title of serie</h2>
             </div>
             <div class="ranking">
-                <img src="" alt="">
+                <img src="media/seriesByRVY/star.svg" alt="">
                 <p>4.5</p>
             </div>
         </div>
     </li>
 </ul>
+{% endblock %}
