--- a/idgs9A/Musica/templates/Musica/base.html
+++ b/idgs9A/Musica/templates/Musica/base.html
@@ -10,15 +10,44 @@
     <title>SpotiUTT</title>
 
     {% load static %}
-    <title>Navbar</title>
-    <link rel="stylesheet" href="{% static 'musica/css/navbar.css' %}">
+
+    <!-- Bootstrap -->
+    <!-- CSS only -->
+    <script src="https://kit.fontawesome.com/fe829b7767.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="{% static 'musica/css/base.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'musica/css/font-awesome.min.css' %}">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <!-- Fuentes -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+
 </head>
 
     <!-- Navegación -->
-
-    <a class="nav-enlace" href="{% url 'home' %}">Inicio</a>
-    <a class="nav-enlace" href="{% url 'aboutus' %}">Acerca de</a>
-    <a class="nav-enlace" href="{% url 'album' %}">Albums</a>
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="navExpand p-4">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link navLink" aria-current="page" href="{% url 'home' %}">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navLink" href="{% url 'aboutus' %}">Acerca de</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navLink" href="{% url 'album' %}">Albums</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <nav class="navbar navStyles">
+        <div class="container-fluid">
+            <button class="navbar-toggler navButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
 
     <!-- Contenido -->
 
