--- a/idgs9A/core/templates/core/home.html
+++ b/idgs9A/core/templates/core/home.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto de IDGS</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
-</html>
+{% extends 'core/base.html' %}
+
+{% load static %}
+
+{% block title %}Portada{% endblock %}
+
+{% block background %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+    <h1>JWN</h1>
+    <span class="subheading">Proyecto de IDGS</span>
+{% endblock %}
