--- a/idgs9A/core/templates/core/bars.html
+++ b/idgs9A/core/templates/core/bars.html
@@ -1,8 +1,12 @@
 {% extends 'core/base.html' %}
 
+{% load static %}
+
 {% block title %}Bares{% endblock %}
 
-{% block content %}
-    <h2>Bares</h2>
-    <p>Bienvenidos.</p>
+{% block background %}{% static 'core/img/bar-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+    <h1>Bares</h1>
+    <span class="subheading">Proyecto de IDGS</span>
 {% endblock %}
