--- a/idgs9A/core/templates/core/towns.html
+++ b/idgs9A/core/templates/core/towns.html
@@ -1,8 +1,12 @@
 {% extends 'core/base.html' %}
 
+{% load static %}
+
 {% block title %}Pueblos Magicos{% endblock %}
 
-{% block content %}
-    <h2>Pueblos Magicos</h2>
-    <p>Bienvenidos.</p>
+{% block background %}{% static 'core/img/pueblos_magicos-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+    <h1>Pueblos magicos</h1>
+    <span class="subheading">Proyecto de IDGS</span>
 {% endblock %}
