--- a/idgs9A/seriesByRVY/templates/seriesByRVY/seriesList.html
+++ b/idgs9A/seriesByRVY/templates/seriesByRVY/seriesList.html
@@ -1,48 +1,23 @@
 {% extends 'seriesByRVY/base.html' %} {% block content %}
 <ul class="serie-list">
-    <li>
-        <div class="serie-card">
-            <div class="serie-image">
-                <img src="media/seriesByRVY/theOffice.jpg" alt="">
+    {% for serie in serie%}
+        <li>
+            <div class="serie-card">
+                <div class="serie-image">
+                    <img src="media/seriesByRVY/{{serie.serie_poster}}" alt="">
+                </div>
+                <div class="title">
+                    <h2>{{serie.serie_name}}</h2>
+                </div>
+                <div class="ranking">
+                    <h4>Temporadas: {{serie.serie_num_temporadas}}</h4>
+                    <h4>Capitulos: {{serie.serie_num_capitulos}}</h4>
+                    <br>
+                    <img src="media/seriesByRVY/star.svg" alt="">
+                    <p>{{serie.serie_ranking}}</p>
+                </div>
             </div>
-            <div class="title">
-                <h2>Title of serie</h2>
-            </div>
-            <div class="ranking">
-                <img src="media/seriesByRVY/star.svg" alt="">
-                <p>4.5</p>
-            </div>
-        </div>
-    </li>
-
-    <li>
-        <div class="serie-card">
-            <div class="serie-image">
-                <img src="media/seriesByRVY/theOffice.jpg" alt="">
-            </div>
-            <div class="title">
-                <h2>Title of serie</h2>
-            </div>
-            <div class="ranking">
-                <img src="media/seriesByRVY/star.svg" alt="">
-                <p>4.5</p>
-            </div>
-        </div>
-    </li>
-    
-    <li>
-        <div class="serie-card">
-            <div class="serie-image">
-                <img src="media/seriesByRVY/theOffice.jpg" alt="">
-            </div>
-            <div class="title">
-                <h2>Title of serie</h2>
-            </div>
-            <div class="ranking">
-                <img src="media/seriesByRVY/star.svg" alt="">
-                <p>4.5</p>
-            </div>
-        </div>
-    </li>
+        </li>
+    {% endfor %}
 </ul>
 {% endblock %}
