--- a/idgs9A/Musica/templates/Musica/base.html
+++ b/idgs9A/Musica/templates/Musica/base.html
@@ -1,72 +1,65 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>SpotiUTT</title>
-
-    {% load static %}
-
-    <!-- Bootstrap -->
-    <!-- CSS only -->
-    <script src="https://kit.fontawesome.com/fe829b7767.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="{% static 'musica/css/base.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'musica/css/font-awesome.min.css' %}">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <!-- Fuentes -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Musica{% endblock %}</title>
+    
+    <!-- css -->
+    <link rel="stylesheet" href="{% static 'musica/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'musica/css/inicio.css' %}">
+    <link rel="stylesheet" href="{% static 'musica/css/cancion.css' %}">
+    <link rel="stylesheet" href="{% static 'musica/css/blog.css' %}">
+   
+    <!--font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+     
+   
 </head>
+<body>
+    <header class"menu">
+        <a href="{% url 'inicio' %}" class="logo">
+            <span>SPOTI</span>UTT</a>
+            <input type="checkbox" name="" id="menu-bar">
+            <label for="menu-bar" class="fa fa-bars"></label>
+            <nav class="navbar">
+                <a href="{% url 'inicio' %}">Inicio </a>
+                <a href="{% url 'cancion' %}">Canciones</a>
+                <a href="{% url 'blog' %}">Blog</a>
+                <a href="{% url 'about' %}">Album</a>
+                <a href="{% url 'contact' %}">contactos</a>
+            </nav>
+    </header>
+    {% block banner%}{% endblock%}
+    {% block tarjetas%} {% endblock%}
+    {% block cancion%} {% endblock%}
+    {% block blog%} {% endblock%}
+    
 
-    <!-- Navegación -->
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="navExpand p-4">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link navLink" aria-current="page" href="{% url 'home' %}">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navLink" href="{% url 'aboutus' %}">Acerca de</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navLink" href="{% url 'album' %}">Albums</a>
-                </li>
-            </ul>
+
+<footer class="contenedor">
+    <div class="redes-sociales">
+        <div class="contenedor-icono">
+            <a href="http://www.twitter.com/falconmasters" target="_blank" class="twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
+        <div class="contenedor-icono">
+            <a href="http://www.facebook.com/falconmasters" target="_blank" class="facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+        </div>
+        <div class="contenedor-icono">
+            <a href="http://www.instagram.com" target="_blank" class="instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
     </div>
-    <nav class="navbar navStyles">
-        <div class="container-fluid">
-            <button class="navbar-toggler navButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </nav>
-
-    <!-- Contenido -->
-
-    <div class="container p-4">
-        {% block content %}{% endblock %}
+    <div class="creado-por">
+        <p>COPYRIGHT © 2022. TODOS LOS DERECHOS RESERVADOS. SPOTIUTT </p>
     </div>
-
-
-    <!-- Pié de página -->
-    <footer>
-        <div class="divFooter">
-            <div class="info">
-                <p class="m-0 mbt1 copyrigth">&copy; 2022, SpotiUTT, Inc. Todos los derechos reservados. Ajenos a cualquier partido politico</p>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Bootstrap -->
-
+</footer>    
 </body>
-
 </html>
