--- a/idgs9A/Musica/templates/Musica/base.html
+++ b/idgs9A/Musica/templates/Musica/base.html
@@ -29,7 +29,7 @@
                 <a href="{% url 'cancion' %}">Canciones</a>
                 <a href="{% url 'blog' %}">Blog</a>
                 <a href="{% url 'about' %}">Album</a>
-                <a href="{% url 'contact' %}">contactos</a>
+                <a href="{% url 'contact' %}">Contactanos</a>
             </nav>
     </header>
     {% block banner%}{% endblock%}
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="creado-por">
-        <p>COPYRIGHT © 2022. TODOS LOS DERECHOS RESERVADOS. SPOTIUTT </p>
+        <p>COPYRIGHT © 2022. TODOS LOS DERECHOS RESERVADOS - SPOTIUTT </p>
     </div>
 </footer>    
 </body>
