--- a/idgs9A/Musica/templates/Musica/cancion.html
+++ b/idgs9A/Musica/templates/Musica/cancion.html
@@ -1,6 +1,6 @@
 {% extends 'Musica/base.html' %}
 
- {% block ttitle %} Inicio {% endblock%}
+{% block title %} Inicio {% endblock%}
 
 {% block banner%} 
 
