--- a/idgs9A/Musica/templates/Musica/contact.html
+++ b/idgs9A/Musica/templates/Musica/contact.html
@@ -1,6 +1,6 @@
 {% extends 'Musica/base.html' %}
 
-{% block title %} Inicio {% endblock%}
+{% block title %} Contactanos {% endblock%}
 
 {% block banner%} 
 
@@ -8,4 +8,14 @@
     <div class="banner-content">
         <h1>Bienvenido a SPOTI UTT</h1>	
     </div>
-</section>     
+</section>
+    {% block contacto %} 
+    {% endblock %}
+<div class="title-cards">
+    <h2>Redes Sociales</h2>
+</div>
+<div class="tarjeta">
+        <img src="" alt="">
+        <h2>Twitter</h2>
+    </div>
+{% endblock %}
