--- a/idgs9A/Musica/templates/Musica/base.html
+++ b/idgs9A/Musica/templates/Musica/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Musica{% endblock %}</title>
+    <title>{% block title %}SPOTI UTT{% endblock %}</title>
     
     <!-- css -->
     <link rel="stylesheet" href="{% static 'musica/css/base.css' %}">
@@ -28,7 +28,7 @@
                 <a href="{% url 'inicio' %}">Inicio </a>
                 <a href="{% url 'cancion' %}">Canciones</a>
                 <a href="{% url 'blog' %}">Blog</a>
-                <a href="{% url 'about' %}">Album</a>
+                <a href="{% url 'album' %}">Album</a>
                 <a href="{% url 'contact' %}">Contactanos</a>
             </nav>
     </header>
@@ -36,18 +36,19 @@
     {% block tarjetas%} {% endblock%}
     {% block cancion%} {% endblock%}
     {% block blog%} {% endblock%}
+    {% block contacto %} {% endblock %}
     
 
 
 <footer class="contenedor">
     <div class="redes-sociales">
         <div class="contenedor-icono">
-            <a href="http://www.twitter.com/falconmasters" target="_blank" class="twitter">
+            <a href="http://www.twitter.com/" target="_blank" class="twitter">
                 <i class="fab fa-twitter"></i>
             </a>
         </div>
         <div class="contenedor-icono">
-            <a href="http://www.facebook.com/falconmasters" target="_blank" class="facebook">
+            <a href="http://www.facebook.com/" target="_blank" class="facebook">
                 <i class="fab fa-facebook-f"></i>
             </a>
         </div>
