--- a/idgs9A/Musica/templates/Musica/cancion.html
+++ b/idgs9A/Musica/templates/Musica/cancion.html
@@ -52,7 +52,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNybXSqkFPVBKXefuGYWGxAkMZv1qDJULmYg&usqp=CAU" alt="">
         <h2>Morat</h2>
         <p class="cancion">LLAMADA PERDIDA</p>
-        <P class="letra">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti provident maiores deserunt </P>
+        <P class="letra">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
     </div>
 </section>
 {% endblock%}
