--- a/idgs9A/Musica/templates/Musica/base.html
+++ b/idgs9A/Musica/templates/Musica/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'musica/css/base.css' %}">
     <link rel="stylesheet" href="{% static 'musica/css/inicio.css' %}">
     <link rel="stylesheet" href="{% static 'musica/css/cancion.css' %}">
-    <link rel="stylesheet" href="{% static 'musica/css/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'musica/css/blogs.css' %}">
    
     <!--font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
