terminamos codigo html

--- a/idgs9A/peliculasSVM/migrations/templates/peliculas/home.html
+++ b/idgs9A/peliculasSVM/migrations/templates/peliculas/home.html
@@ -1,21 +1,51 @@
+<link href="{% static 'peliculas/css/home.css' %}" rel="hoja de estilo">
+
 <h1>SVM tu mejor opción</h1>
-
 <ul>
-    <li><a href="/">Portada</a></li>
-    <li><a href="/about/">Peliculas</a></li>
+    <li><a href="/">Catalogo</a></li>
     <li><a href="/contact/">Categorias</a></li>
-    <li><a href="/ayuda/">Ayuda</a></li>
 </ul>
-
 <h2>Bienvenidos</h2>
-
 <p>Portada</p>
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="https://es.web.img3.acsta.net/pictures/22/02/18/10/20/5195258.jpg">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Descripción</h5>
+          <p class="card-text">En la trama, Sonic une fuerzas con Tails para evitar que el Dr. Robotnik y Knuckles encuentren una poderosa esmeralda que tiene el poder de crear y destruir civilizaciones.</p>
+          <p class="card-text"><small class="text-muted">Sonic 2</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<div class="card" style="width: 18rem;">
-    <img src="https://es.web.img3.acsta.net/c_310_420/pictures/22/02/18/10/20/5195258.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Descripción</h5>
-      <p class="card-text">En la trama, Sonic une fuerzas con Tails para evitar que el Dr. Robotnik y Knuckles encuentren una poderosa esmeralda que tiene el poder de crear y destruir civilizaciones.</p>
-      <a href="#" class="btn btn-primary">Sonic 2</a>
+
+  <div class="card-group">
+    <div class="card">
+      <img src="https://es.web.img3.acsta.net/pictures/22/02/18/10/20/5195258.jpg" class="card-img-top" alt="20px">
+      <div class="card-body">
+        <h5 class="card-title">Descripción</h5>
+          <p class="card-text">En la trama, Sonic une fuerzas con Tails para evitar que el Dr. Robotnik y Knuckles encuentren una poderosa esmeralda que tiene el poder de crear y destruir civilizaciones.</p>
+          <p class="card-text"><small class="text-muted">Sonic 2</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://lumiere-a.akamaihd.net/v1/images/beta_epic_payoff_las_f8ee4a65.jpeg" class="card-img-top" alt="20px">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Buzz como el astronauta del cual se inspiraría el juguete. Se le muestra como un astronauta que llega a un planeta extraño en una nave espacial junto a su tripulación.</p>
+        <p class="card-text"><small class="text-muted">Buzz lightyear</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="548572.jpg" class="card-img-top" alt="20px">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Blu, un guacamayo domesticado que vive en Minnesota, debe volver a su Brasil natal para conocer a Perla, una bonita hembra, y evitar así la desaparición de su especie. Pero una vez en Río de Janeiro, los dos pájaros son secuestrados por unos contrabandistas de animales..</p>
+        <p class="card-text"><small class="text-muted">RIO</small></p>
+      </div>
     </div>
   </div>
