detalles de contact.html

--- a/idgs9A/Musica/templates/Musica/contact.html
+++ b/idgs9A/Musica/templates/Musica/contact.html
@@ -7,15 +7,43 @@
 <section class="banner">
     <div class="banner-content">
         <h1>Bienvenido a SPOTI UTT</h1>	
+        <h2>A continuación te presentamos nuestras redes sociales</h2>
     </div>
 </section>
     {% block contacto %} 
     {% endblock %}
-<div class="title-cards">
-    <h2>Redes Sociales</h2>
-</div>
-<div class="tarjeta">
-        <img src="" alt="">
+<section id="redes">
+    <div class="tarjeta">
+        <a href="http://www.instagram.com/" target="_blank">
+        <img src="https://1000marcas.net/wp-content/uploads/2019/11/Instagram-logo-768x768.png" alt="">
+        <h2>Instagram</h2>
+    </div>
+    <div class="tarjeta">
+        <a href="http://www.twitter.com/" target="_blank" >
+        <img src="https://1000marcas.net/wp-content/uploads/2019/11/Twitter-logo-640x520.png" alt="">
         <h2>Twitter</h2>
     </div>
+    <div class="tarjeta">
+        <a href="http://www.facebook.com/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="">
+        <h2>Facebook</h2>
+    </div>
+</section>
+<section id="redes">
+    <div class="tarjeta">
+        <a href="https://github.com/" target="_blank">
+        <img src="https://global-uploads.webflow.com/5f5a53e153805db840dae2db/6073fbf151fa4565d48572dc_GitHub_aprender-programaci%25C3%25B3n.jpeg" alt="">
+        <h2>GitHub</h2>
+    </div>
+     <div class="tarjeta">
+        <a href="https://gmail.com/" target="_blank">
+        <img src="https://1000marcas.net/wp-content/uploads/2019/11/logo-Gmail-1.png" alt="">
+        <h2>Gmail</h2>
+    </div>
+    <div class="tarjeta">
+        <a href="https://youtu.be/o-YBDTqX_ZU/" target="_blank">
+        <img src="https://1000marcas.net/wp-content/uploads/2020/02/YouTube-logo-768x432.png" alt="">
+        <h2>YouTube</h2>
+    </div>
+</section>
 {% endblock %}
