--- a/idgs9A/Musica/static/musica/css/cancion.css
+++ b/idgs9A/Musica/static/musica/css/cancion.css
@@ -1,17 +1,16 @@
-#tarjetas{
+#tarjetas,
+#redes {
     display: flex;
     justify-content: center;
     background: #efefef;
 }
-.tarjeta img{
-    
-      width: 100%;
-      height: 65%;
-      
-      
+
+.tarjeta img {
+    width: 100%;
+    height: 65%;
 }
 
-.tarjeta{
+.tarjeta {
     width: 20%;
     margin: 30px 30px 30px 30px;
     background: #fff;
@@ -19,15 +18,18 @@
     text-align: center;
     box-shadow: 1px 1px 11px #00000030;
 }
-.tarjeta h2{
+
+.tarjeta h2 {
     font-size: 20px;
     color: #aaa;
 }
-.cancion{
+
+.cancion {
     font-size: 20px;
     color: #ccc;
 }
-.letra{
+
+.letra {
     font-size: 17px;
     line-height: 30px;
     color: black;
