ediciones adicionales del template album

--- a/idgs9A/Musica/templates/Musica/blog.html
+++ b/idgs9A/Musica/templates/Musica/blog.html
@@ -1,6 +1,6 @@
 {% extends 'Musica/base.html' %}
 
- {% block ttitle %} Blog {% endblock%}
+ {% block title %} SPOTI UTT - Blog {% endblock%}
 
 {% block banner%} 
 <section class="banner">
