--- a/idgs9A/Musica/templates/Musica/cancion.html
+++ b/idgs9A/Musica/templates/Musica/cancion.html
@@ -1,6 +1,6 @@
 {% extends 'Musica/base.html' %}
 
-{% block title %} Canción {% endblock%}
+{% block title %} SPOTI UTT - Canción {% endblock%}
 
 {% block banner%} 
 
