--- a/idgs9A/Musica/templates/Musica/inicio.html
+++ b/idgs9A/Musica/templates/Musica/inicio.html
@@ -1,5 +1,5 @@
 {% extends 'Musica/base.html' %} 
-{% block ttitle %} Inicio {% endblock%} 
+{% block title %} SPOTI UTT {% endblock%} 
 {%block banner%}
 <section class="banner">
   <div class="banner-content">
