--- a/idgs9A/Musica/templates/Musica/album.html
+++ b/idgs9A/Musica/templates/Musica/album.html
@@ -1,5 +1,5 @@
 {% extends 'Musica/base.html' %} 
-{% block title %} Álbumes {% endblock%} 
+{% block title %} SPOTI UTT - Álbumes {% endblock%} 
 {%block banner%}
 <section class="banner">
   <div class="banner-content">
@@ -19,8 +19,7 @@
         <div class="imgBx">
             <img
                 src="https://reggaetonsinlimite.b-cdn.net/wp-content/uploads/2022/05/UN-VERANO-SIN-TI-.jpg"
-                alt="images"
-            />
+                alt="images">
       </div>
       <div class="details">
         <h2>Bad Bunny<br /><span>Ojitos lindos</span></h2>
@@ -107,24 +106,24 @@
 <div class="card">
     <div class="imgBx">
       <img
-        src="https://i.discogs.com/xSuxXlxvq7luwiZyWaB0btXBHeEAXynzo9M7a3mUlKg/rs:fit/g:sm/q:90/h:599/w:600/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTY4MDI4/OTUtMTYxMjI3MDM5/Ny05OTcwLm1wbw.jpeg"
+        src="https://m.media-amazon.com/images/I/61sbDk7sKUL._AC_SL1200_.jpg"
         alt="images"
       />
     </div>
     <div class="details">
-      <h2>Juan Gabriel<br /><span>Pensamientos</span></h2>
+      <h2>Heroes del Silencio<br /><span>Senderos de Traición</span></h2>
     </div>
   </div>
 
   <div class="card">
     <div class="imgBx">
       <img
-        src="https://is4-ssl.mzstatic.com/image/thumb/Music114/v4/d1/50/e6/d150e6b7-cc38-a0b1-2465-32097cef17a7/886445776140.png/1200x1200bf-60.jpg"
+        src="https://imagenes.elpais.com/resizer/WX-dG_SgKLnaCRw5ojU1DMUwhYU=/1960x0/arc-anglerfish-eu-central-1-prod-prisa.s3.amazonaws.com/public/X7BJXDZ7M3GEWJKRAL34GFKEAA.jpg"
         alt="images"
       />
     </div>
     <div class="details">
-      <h2>Dread Mar I<br /><span>10 Años</span></h2>
+      <h2>Caifanes<br /><span>Caifanes</span></h2>
     </div>
   </div>
 </div>
