--- a/idgs9A/Musica/templates/Musica/contact.html
+++ b/idgs9A/Musica/templates/Musica/contact.html
@@ -1,6 +1,6 @@
 {% extends 'Musica/base.html' %}
 
-{% block title %} Contactanos {% endblock%}
+{% block title %} SPOTI UTT - Contactanos {% endblock%}
 
 {% block banner%} 
 
@@ -47,3 +47,4 @@
     </div>
 </section>
 {% endblock %}
+{% block footer%} {% endblock%}
