--- a/idgs9A/Musica/templates/Musica/cancion.html
+++ b/idgs9A/Musica/templates/Musica/cancion.html
@@ -66,8 +66,8 @@
     </div>
     <div class="tarjeta">
         <img src="https://i.musicaimg.com/letras/max/2574157.jpg" alt="">
-        <h2>Morat</h2>
-        <p class="cancion">LLAMADA PERDIDA</p>
+        <h2>LASSO</h2>
+        <p class="cancion">Ojos marrones</p>
         <P class="letra">Ella sí se lleva bien con mis amigos
             Nunca discutimos, es lo que siempre he querido</P>
     </div>
