--- a/idgs9A/Musica/templates/Musica/album.html
+++ b/idgs9A/Musica/templates/Musica/album.html
@@ -1,5 +1,5 @@
 {% extends 'Musica/base.html' %} 
-{% block title %} SPOTI UTT - Álbumes {% endblock%} 
+{% block title %} SPOTI UTT - Álbums {% endblock%} 
 {%block banner%}
 <section class="banner">
   <div class="banner-content">
