segun yo, ya esta

--- a/idgs9A/core/templates/core/home.html
+++ b/idgs9A/core/templates/core/home.html
@@ -16,6 +16,7 @@
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a type="button" href="{% url 'home' %}" class="btn btn-primary btn-lg px-4 gap-3">Videogames</button>
                 <a type="button" class="btn btn-success btn-lg px-4">Series</a>
+                <a type="button" class="btn btn-light btn-lg px-4">EquipoJWN</button>
               </div>
             </div>
           </div>
