--- a/idgs9A/equipoJWN/templates/equipoJWN/music.html
+++ b/idgs9A/equipoJWN/templates/equipoJWN/music.html
@@ -1,10 +1,10 @@
-{% extends 'core/base.html' %}
+{% extends 'equipoJWN/base.html' %}
 
 {% load static %}
 
 {% block title %}Musica{% endblock %}
 
-{% block background %}{% static 'core/img/musica-bg.jpg' %}{% endblock %}
+{% block background %}{% static 'equipoJWN/img/musica-bg.jpg' %}{% endblock %}
 
 {% block headers %}
     <h1>Musica</h1>
