--- a/idgs9A/equipoJWN/templates/equipoJWN/towns.html
+++ b/idgs9A/equipoJWN/templates/equipoJWN/towns.html
@@ -1,10 +1,10 @@
-{% extends 'core/base.html' %}
+{% extends 'equipoJWN/base.html' %}
 
 {% load static %}
 
 {% block title %}Pueblos Magicos{% endblock %}
 
-{% block background %}{% static 'core/img/pueblos_magicos-bg.jpg' %}{% endblock %}
+{% block background %}{% static 'equipoJWN/img/pueblos_magicos-bg.jpg' %}{% endblock %}
 
 {% block headers %}
     <h1>Pueblos magicos</h1>
