--- a/idgs9A/equipoJWN/templates/equipoJWN/bars.html
+++ b/idgs9A/equipoJWN/templates/equipoJWN/bars.html
@@ -1,10 +1,10 @@
-{% extends 'core/base.html' %}
+{% extends 'equipoJWN/base.html' %}
 
 {% load static %}
 
 {% block title %}Bares{% endblock %}
 
-{% block background %}{% static 'core/img/bar-bg.jpg' %}{% endblock %}
+{% block background %}{% static 'equipoJWN/img/bar-bg.jpg' %}{% endblock %}
 
 {% block headers %}
     <h1>Bares</h1>
