--- a/idgs9A/equipoJWN/templates/equipoJWN/base.html
+++ b/idgs9A/equipoJWN/templates/equipoJWN/base.html
@@ -6,11 +6,11 @@
     <title>{% block title %}{% endblock %} | Proyecto de IDGS</title>
     
     {% load static %}
-    <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'core/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'equipoJWN/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'equipoJWN/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href="{% static 'core/css/clean-blog.min.css' %}" rel="stylesheet">
+    <link href="{% static 'equipoJWN/css/clean-blog.min.css' %}" rel="stylesheet">
 
 </head>
 <body>
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="{% url 'bars' %}">Bares</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'music' %}">Musica</a>
+                        <a class="nav-link" href="{% url 'songs' %}">Musica</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'towns' %}">Pueblos Magicos</a>
@@ -85,8 +85,8 @@
     </footer>
 
     <!-- Bootstrap y Javascripts -->
-    <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'core/js/clean-blog.min.js' %}"></script>
+    <script src="{% static 'equipoJWN/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'equipoJWN/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'equipoJWN/js/clean-blog.min.js' %}"></script>
 </body>
 </html>
